[package]
name = "snap7-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
snap7-rs = "1.142.1"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
headers = "0.4.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
validator = { version = "0.18.1", features = ["derive"] }


[build-dependencies]
cc = "1.0"
